# np-solver

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml
core/: evaluator.py
interface/: Evaluator.py  Solution.py
metaheuristics/: GA.py  GRASP.py  TS.py
metaheuristics/GA/: GA.py  Mixin.py
metaheuristics/ga/: __init__.py  operators.py
metaheuristics/grasp/: GRASP.py
metaheuristics/ts/: TS.py
np_solver.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
np_solver/core/: __init__.py  evaluator.py  problem_instance.py  solution.py
np_solver/metaheuristics/: __init__.py  assembler.py  metaheuristic.py
np_solver/metaheuristics/alns/: __init__.py  components.py  interface.py  solver.py
np_solver/metaheuristics/ga/: __init__.py  initial_implementation.py  operators.py
np_solver/metaheuristics/grasp/: GRASP.py  __init__.py  operators.py
np_solver/metaheuristics/ts/: TS.py  __init__.py  components.py  components_old.py  interface.py  solver.py  ts.py
problems/MaxOnesProblem/: MaxOnesProblem.py
problems/QBF/: QBF.py  QBF_Inverse.py
problems/QBF/instances/: README:Zone.Identifier
problems/QBF/solver/: GA_QBF.py  GRASP_QBF.py  TS_QBF.py
problems/SCQBF/: SCQBF.py
problems/SCQBF/instances/: scqbf025  scqbf050  scqbf200  scqbf400
problems/SCQBF/instances/report/: SCQBF_191025_010452.txt  SCQBF_191025_010514.txt  SCQBF_191025_010552.txt
problems/SCQBF/solver/: GA_SCQBF.py
results/: .~lock.ga_scqbf_results2 (cópia).csv#  ga_scqbf_results_final.csv
utils/: Report.py  mixin.py
