
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "np-solver"
version = "0.1.0"
authors = [
  { name="Lucas Gabriel Monteiro da Costa", email="code.lucasgabriel@gmail.com" },
  { name="Pietro Grazzioli Golfeto", email="pggolfeto@gmail.com" }
]
description = "A framework for building metaheuristics using mixins and factory functions."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
keywords = ["metaheuristics", "optimization", "np-hard", "solver", "numpy"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.21.0",
]

[project.urls]
"Homepage" = "https://github.com/code-lucasgabriel/np-solver"
"Repository" = "https://github.com/code-lucasgabriel/np-solver"
"Bug Tracker" = "https://github.com/code-lucasgabriel/np-solver/issues"

[tool.setuptools.packages.find]
where = ["."] 
include = ["np_solver*"]
